pre finish first chapter

--- a/config.tex
+++ b/config.tex
@@ -65,6 +65,9 @@
 \usepackage{longtable}
 \usepackage{etoolbox}
 
+
+\usepackage{color}
+
 \DeclareCaptionLabelSeparator{emdash}{\space---\space}  % пробел, длинное тире, пробел
 
 \captionsetup[table]{position=t, singlelinecheck=false, justification=raggedright, labelsep=emdash, name=Таблица}
